// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: MovieCard render the component 1`] = `
<DocumentFragment>
  <div
    class="sc-iBPRYJ cXdPVu"
  >
    <img
      alt="Lorem"
      class="sc-dlfnbm CUPlz"
      src="test-file-stub"
    />
    <div
      class="sc-gKsewC pzKZi"
    >
      <div
        class="sc-hKgILt cfYQtU"
      >
        <img
          data-testid="set-as-fav"
          height="24"
          src="test-file-stub"
          width="24"
        />
      </div>
      <div
        class="sc-gsTCUz"
      >
        <h2
          class="sc-eCssSg drdQJI"
        >
          Lorem
        </h2>
        <div
          class="sc-jSgupP cPrTxs"
        >
          2020
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[Component]: MovieCard render the component active with image 1`] = `
<DocumentFragment>
  <div
    class="sc-iBPRYJ cXdPVu"
  >
    <img
      alt="Lorem"
      class="sc-dlfnbm CUPlz"
      src="https://images-na.ssl-images-amazon.com/images/I/A1IuOyoadxL._AC_SY550_.jpg"
    />
    <div
      class="sc-gKsewC pzKZi"
    >
      <div
        class="sc-hKgILt cfYQtU"
      >
        <img
          data-testid="set-as-fav"
          height="24"
          src="test-file-stub"
          width="24"
        />
      </div>
      <div
        class="sc-gsTCUz"
      >
        <h2
          class="sc-eCssSg drdQJI"
        >
          Lorem
        </h2>
        <div
          class="sc-jSgupP cPrTxs"
        >
          2020
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
